tests/error/misc_errors/custom_not_empty.py
from guppylang_internals.decorator import custom_function


@custom_function()
def foo(x: int) -> int:
    return x


foo.compile()
