tests/error/misc_errors/custom_not_empty.err
Error: Unexpected function body (at $FILE:6:4)
  | 
4 | @custom_function()
5 | def foo(x: int) -> int:
6 |     return x
  |     ^^^^^^^^ Body of custom function `foo` must be empty

Guppy compilation failed due to 1 previous error
